...
                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
                                <color key="backgroundColor" red="0.0" green="0.6588235294" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="4FQ-6y-Iwy"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                <state key="normal" title="Checkout">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="checkoutNow:" destination="BYZ-38-t0r" eventType="touchUpInside" id="SUw-qZ-ooW"/>
                                </connections>
                            </button>
...
                            <constraint firstItem="sci-zV-JHT" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="tXY-ES-7eu"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <navigationItem key="navigationItem" title="Basket" id="vfl-6V-8sH">
                        <rightBarButtonItems>
                            <barButtonItem title="basket" image="basket" id="A5O-6l-NP0">
                                <connections>
                                    <action selector="checkoutNow:" destination="BYZ-38-t0r" id="ARg-Vd-SJh"/>
                                </connections>
                            </barButtonItem>
                            <barButtonItem title="0" id="1P9-DA-RYX"/>
                        </rightBarButtonItems>
...
                                <color key="backgroundColor" red="0.0" green="0.6588235294" blue="0.85098039219999999" alpha="1" colorSpace="calibratedRGB"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="44" id="Ahs-Z4-oK5"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="231" id="cSd-UF-coU"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <state key="normal" title="Change currency €">
                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="changeCurrency" destination="kqL-Fp-zgf" eventType="touchUpInside" id="saJ-DA-cpD"/>
                                </connections>
                            </button>
...
                                </connections>
                            </pickerView>
                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Cfq-x1-fE0">
                                <rect key="frame" x="0.0" y="426" width="375" height="44"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                <items>
                                    <barButtonItem title="Done" style="done" id="4CB-Dt-ehC">
                                        <connections>
                                            <action selector="selectCurrency:" destination="kqL-Fp-zgf" id="HmH-84-wiL"/>
                                        </connections>
                                    </barButtonItem>
                                </items>
                            </toolbar>
...
