...
    }
    

    @IBAction func checkoutNow(_ sender: Any) {
        if badgeCount == 0 {
            let alert = UIAlertController.init(title: "Empty Basket", message: "Please add items to the basket bofore checking out, you can do so using the + and - buttons located at the right of each item name", preferredStyle: UIAlertController.Style.alert)
            let okAction = UIAlertAction.init(title: "OK", style: UIAlertAction.Style.default, handler: nil)
            alert.addAction(okAction)
            present(alert, animated: true, completion: nil)
        }
        else{
            performSegue(withIdentifier: .checkoutSegue, sender: self)
        }
...
